[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = ""
authors = ["your_name <your_email>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
distro = "1.9.0"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
multidict = "6.0.5"
openai = "0.28.0"
pydantic = "2.8.0"
pydantic_core = "2.20.0"
pyttsx3 = "2.90"
requests = "2.32.3"
setuptools = "70.2.0"
sniffio = "1.3.1"
soupsieve = "2.5"
SpeechRecognition = "3.10.4"
tqdm = "4.66.4"
typing_extensions = "4.12.2"
urllib3 = "2.2.2"
wikipedia = "1.4.0"
yarl = "1.9.4"
